# WATER

./: .gitignore  GITHUB_DISCUSSION_POST.md  README.md  demo_local.py  pyproject.toml
docker_test/: step1_cold.py  step2_png.py
examples/: federated_ml.yaml  genomics_pipeline.yaml  imaging_pipeline.yaml  niffler_dicom_pipeline.yaml
tests/: test_audit.py  test_registry.py  test_scheduler.py  test_schema.py  test_simulator.py
water/: cli.py
water/adapters/: niffler.py
water/api/: app.py
water/converters/: graphml_to_water.py
water/engine/: audit.py  data_transfer.py  execution_engine.py  health_daemon.py  node_agent.py  parallel_executor.py  run_store.py
water/registry/: node_registry.py
water/scheduler/: scheduler.py
water/schema/: workflow.py
water/simulation/: simulator.py
